src/objects/SalesOrderToInvoiceFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a custom setting holding a field mapping to create records from SalesOrder__c to SalesInvoice__c</description>
    <fields>
        <fullName>DefaultToFieldValue__c</fullName>
        <label>DefaultToFieldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromField__c</fullName>
        <label>FromField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromObject__c</fullName>
        <label>FromObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToField__c</fullName>
        <label>ToField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToObject__c</fullName>
        <label>ToObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Order To Invoice FieldMapping</label>
</CustomObject>